2005-02-25 Werner Hoch <werner.ho@gmx.de>

	* noweb/o_misc.nw: fixed autonumber_text

2005-02-24  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* noweb/x_multiattrib.nw: Removed unused variables and fixed a couple 
	of gcc warnings.
	
	* noweb/g_funcs.nw (hash_table_2_list): Replaced deprecated guile 
	functions with their equivalents in the new scm interface.

	* scripts/notangle_guile.in: New version.
	
	* configure.ac, scripts/Makefile.am: Adapted for renaming of script.
	
	* scripts/notangle_guile.scm.in: Renamed to notangle_guile.in.

2005-02-22  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* noweb/x_log.nw: Fixed to work with GTK 2.2.

2005-02-21  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* noweb/o_misc.nw (o_edit): Adapted for new dialog.

	* include/x_multiattrib.h: New file for the new x_multiattrib.nw.
	
	* noweb/x_multiattrib.nw: Modified the dialog to remove deprecated 
	widgets and enable edition of attributes directly from the list.
	
	* noweb/x_pagesel.nw: Added a context-sensitive menu to the list of 
	pages and a label below for information.

2005-02-21 04:11  Dan McMahill <danmc>

	* noweb/x_fileselect.nw: remove unused variable

2005-02-21 04:10  Dan McMahill <danmc>

	* noweb/x_log.nw: add a missing GTK_TEXT_VIEW ()

2005-02-21 04:06  Dan McMahill <danmc>

	* noweb/x_pagesel.nw: specify return type for some static functions

2005-02-21 03:58  Dan McMahill <danmc>

	* autogen.sh: avoid using the '-path' primary to find(1) as it's an
	  extension to posix.2 and is not supported on some operating
	  systems such as solaris.  Now we can autogen.sh on solaris 9.

2005-02-21 03:07  Dan McMahill <danmc>

	* noweb/o_text.nw: fix some format string/type mismatch bugs

2005-02-21 03:07  Dan McMahill <danmc>

	* noweb/g_rc.nw: comment out some unused variables which are part
	  of commented out code

2005-02-15 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/x_log.nw: Added code to scroll to the end of the text buffer
	when the log window is opened up.
